--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -7,21 +7,16 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.p1.DetailsActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="match_parent">
+            <include layout="@layout/content_details" />
+        </ScrollView>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_details" />
+        <FrameLayout
+            android:id="@+id/containerOnePane"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -29,6 +24,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_lock_idle_alarm" />
 
 </android.support.design.widget.CoordinatorLayout>
