--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -4,94 +4,152 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.p1.DetailsActivity"
     tools:showIn="@layout/activity_details">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/backgroundImageView"
-            android:scaleType="centerCrop"
-            android:minHeight="200dp"
-            android:layout_marginBottom="@dimen/appbar_padding_top"
-            android:layout_gravity="center_horizontal" />
-
-
+        android:id="@+id/scrollView">
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/detailPosterImageview"
-                android:layout_gravity="left"
-                android:foregroundGravity="left"
-                android:minWidth="150dp"
-                android:minHeight="150dp"  />
-
+            android:layout_height="wrap_content">
 
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_gravity="end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
 
-                <TextView
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textViewTitle"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:text="TITLE" />
+                    android:id="@+id/detailPosterImageview"
+                    android:foregroundGravity="left"
+                    android:minWidth="150dp"
+                    android:minHeight="150dp"  />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Release Date"
-                    android:id="@+id/textViewRelease"
-                    android:layout_gravity="center_horizontal" />
 
-                <TextView
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_gravity="end"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Rating"
-                    android:id="@+id/textViewRating"
-                    android:gravity="center_horizontal"
-                    android:layout_gravity="center_horizontal" />
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textViewTitle"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textSize="25dp"
+                        android:text="" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:id="@+id/textViewRelease"
+                        android:layout_gravity="center_horizontal" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:id="@+id/textViewRating"
+                        android:gravity="center_horizontal"
+                        android:layout_gravity="center_horizontal" />
+                </LinearLayout>
+
             </LinearLayout>
+
+            <View
+                android:id="@+id/separator"
+                android:layout_width="fill_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="10dp"
+                android:background="#6b6969"
+                android:visibility="invisible"/>
+
+            <TextView
+                android:id="@+id/synopsisHeading"
+                android:textSize="20sp"
+                android:text=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="5dp"
+                android:id="@+id/textViewSynopsis"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="6dp"/>
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewSpace"
-            android:layout_gravity="center_horizontal" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Overview..."
-            android:id="@+id/textViewSynopsis"
-            android:layout_gravity="center_horizontal" />
 
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/trailerHeading"
+        android:layout_below="@+id/scrollView"
+        android:text=""
+        android:textSize="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ListView
+        android:id="@+id/trailerListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="5dp"
+        android:layout_below="@+id/trailerHeading"/>
+
+
+    <TextView
+        android:layout_below="@+id/trailerListView"
+        android:layout_marginTop="10dp"
+        android:id="@+id/reviewHeading"
+        android:textSize="20sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listViewReview"
+        android:layout_below="@+id/reviewHeading"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="3sp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="25dp"/>
+
+  <!--  <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:text="Check Review"
+        android:layout_alignBottom="@+id/scrollView"
+        android:layout_centerHorizontal="true"
+
+        android:id="@+id/textView" />  -->
+
 </RelativeLayout>
+
+
+
