--- a/app/src/main/res/layout/fragment_main_toprated.xml
+++ b/app/src/main/res/layout/fragment_main_toprated.xml
@@ -1,17 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="com.example.p1.MainActivity$MostPopular">
 
     <GridView
         android:id="@+id/griview_toprated"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="auto_fit"></GridView>
+        android:numColumns="3">
 
-</RelativeLayout>
+    </GridView>
+
+</LinearLayout>
