--- a/app/src/main/res/layout/trailer.xml
+++ b/app/src/main/res/layout/trailer.xml
@@ -3,12 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/checkTextView"
-
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"/>
+        android:textColor="#808080"
+        android:id="@+id/trailerItem"/>
 
 </LinearLayout>
